welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:55: error: unclosed character literal
  }'
   ^PictureMono2:55: error: ';' expected but something found.
  }'
   ^